# Assignemnt4

./: CMakeLists.txt  README.txt
images/abdomen/: image-000.pgm  image-001.pgm  image-0010.pgm  image-00100.pgm  image-00101.pgm  image-00102.pgm  image-00103.pgm  image-00104.pgm  image-00105.pgm  image-00106.pgm  image-00107.pgm  image-00108.pgm  image-00109.pgm  image-0011.pgm  image-00110.pgm  image-00111.pgm  image-00112.pgm  image-00113.pgm  image-00114.pgm  image-00115.pgm  image-00116.pgm  image-00117.pgm  image-00118.pgm  image-00119.pgm  image-0012.pgm  image-00120.pgm  image-00121.pgm  image-00122.pgm  image-00123.pgm  image-00124.pgm  image-00125.pgm  image-00126.pgm  image-00127.pgm  image-00128.pgm  image-00129.pgm  image-0013.pgm  image-00130.pgm  image-00131.pgm  image-00132.pgm  image-00133.pgm  (+321 more)
images/benchmark/: test210.pgm  test503.pgm
images/chicken/: chicken0.pgm  chicken1.pgm  chicken10.pgm  chicken11.pgm  chicken12.pgm  chicken13.pgm  chicken14.pgm  chicken15.pgm  chicken16.pgm  chicken17.pgm  chicken18.pgm  chicken19.pgm  chicken2.pgm  chicken20.pgm  chicken21.pgm  chicken22.pgm  chicken23.pgm  chicken24.pgm  chicken3.pgm  chicken4.pgm  chicken5.pgm  chicken6.pgm  chicken7.pgm  chicken8.pgm  chicken9.pgm
images/colored_head/: head0.ppm  head1.ppm  (+4 more)
kernels/: 2NDedgedetection3x3x3.txt  3RDedgedetection3x3x3.txt  boxblur3x3x3.txt  edgedetection3x3x3.txt  gaussian5x5x5.txt  identity3x3x3.txt  sharpen3x3x3.txt
src/: conv_separable_host.cpp  cuda_util.h  image.cpp  image.h  kernel_separable_float.h  kernel_separable_half.h  main.cu  timer.h
(+237 files in other folders)
